--- a/Northwind.Application/Views/Employees/Details.cshtml
+++ b/Northwind.Application/Views/Employees/Details.cshtml
@@ -10,6 +10,12 @@
     <h4>Employee</h4>
     <hr />
     <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Photo)
+        </dt>
+        <dd class="col-sm-10">
+            <img src="data:image/bmp;base64,@Convert.ToBase64String(Model.Photo!)" style="height:120px;width:120px;" />
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.LastName)
         </dt>
@@ -87,12 +93,6 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Extension)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Photo)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Photo)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Notes)
