--- a/Northwind.Application/Views/Shared/_Layout.cshtml
+++ b/Northwind.Application/Views/Shared/_Layout.cshtml
@@ -31,9 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
                         </li>
-                        <li>
-                            <partial name="_LoginPartial" />
-                        </li>
+                    </ul>
+                    <ul class="align-content-end">
+                        <partial name="_LoginPartial" />
                     </ul>
                 </div>
             </div>
