--- a/Northwind.Application/Views/Home/Index.cshtml
+++ b/Northwind.Application/Views/Home/Index.cshtml
@@ -5,4 +5,5 @@
 <div class="text-center">
     <h1 class="display-4">Darth Vader</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1>Environment: @Environment.GetEnvironmentVariable("ASPNETCORE_ENVIRONMENT")</h1>
 </div>
