--- a/Northwind.Application/Views/Employees/Index.cshtml
+++ b/Northwind.Application/Views/Employees/Index.cshtml
@@ -1,22 +1,19 @@
-﻿@model IEnumerable<Northwind.Data.Entities.Employee>
+﻿@model IEnumerable<Northwind.Application.Models.Employee.EmployeeIndexModel>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Employees";
 }
 
-<h1>Index</h1>
+<h1>Employees</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<button class="btn btn-primary" onclick="location.href = '@Url.ActionLink("Create", "Employees")'">
+    Create New
+</button>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.LastName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FirstName)
+                Full Name
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Title)
@@ -28,9 +25,6 @@
                 @Html.DisplayNameFor(model => model.HireDate)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.City)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Photo)
             </th>
             <th></th>
@@ -38,32 +32,31 @@
     </thead>
     <tbody>
 @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
+        <tr onclick="location.href = '@Url.ActionLink("Details", "Employees", new { id = item.EmployeeId })'" style="cursor:pointer">
+            <td class="align-middle">
+                @Html.DisplayFor(modelItem => item.FirstName) @Html.DisplayFor(modelItem => item.LastName)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
+            <td class="align-middle">
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
-            <td>
+            <td class="align-middle">
                 @Html.DisplayFor(modelItem => item.BirthDate)
             </td>
-            <td>
+            <td class="align-middle">
                 @Html.DisplayFor(modelItem => item.HireDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.City)
             </td>
             <td>
                 <img src="data:image/bmp;base64,@Convert.ToBase64String(item.Photo!)" style="height:60px;width:60px;" />
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.EmployeeId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.EmployeeId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.EmployeeId">Delete</a>
+                <ul style="list-style-type: none;">
+                    <li class="mb-1">
+                        <a asp-action="Edit" asp-route-id="@item.EmployeeId">Edit</a>
+                    </li>
+                    <li>
+                        <a asp-action="Delete" asp-route-id="@item.EmployeeId">Delete</a>
+                    </li>
+                </ul>
             </td>
         </tr>
 }
