Implemented confirmation email sender service

--- a/Northwind.Application/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Northwind.Application/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,8 +5,8 @@
     ViewData["Title"] = "Log in";
 }
 
-<h1>@ViewData["Title"]</h1>
-<div class="m-auto">
+<div class="m-5">
+    <h1>@ViewData["Title"]</h1>
     <form id="account" method="post">
         <h2>Use a local account to log in.</h2>
         <hr />
