--- a/Northwind.Application/Views/Shared/_Layout.cshtml
+++ b/Northwind.Application/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - NorthwindApp</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/NorthwindApp.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/Northwind.Application.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
