--- a/Northwind.Application/Views/Employees/Create.cshtml
+++ b/Northwind.Application/Views/Employees/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Northwind.Application.Models.Employee.EmployeeCreateEditModel
+﻿@model Northwind.Application.Models.Employee.EmployeeCreateModel
 @{
     ViewData["Title"] = "Create";
 }
