--- a/Northwind.Application/Views/Categories/Create.cshtml
+++ b/Northwind.Application/Views/Categories/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@model Northwind.Data.Entities.Category
-
+﻿@model Northwind.Application.Models.Category.CategoryCreateModel
 @{
     ViewData["Title"] = "Create";
 }
@@ -10,7 +9,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="CategoryName" class="control-label"></label>
@@ -23,9 +22,9 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Picture" class="control-label"></label>
-                <input asp-for="Picture" class="form-control" />
-                <span asp-validation-for="Picture" class="text-danger"></span>
+                <label asp-for="FormFile" class="control-label">Picture</label>
+                <input asp-for="FormFile" class="form-control" />
+                <span asp-validation-for="FormFile" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
