--- a/Northwind.Application/Views/Categories/Edit.cshtml
+++ b/Northwind.Application/Views/Categories/Edit.cshtml
@@ -13,6 +13,13 @@
         <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="CategoryId" />
+            <input type="hidden" asp-for="Picture" />
+            <div class="form-group">Picture</div>
+            <div class="form-group">
+                <img src="data:image/bmp;base64,@Convert.ToBase64String(Model.Picture!)" style="height:160px;width:160px;" />
+                <input asp-for="FormFile" class="form-control" />
+                <span asp-validation-for="FormFile" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="CategoryName" class="control-label"></label>
                 <input asp-for="CategoryName" class="form-control" />
@@ -22,11 +29,6 @@
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FormFile" class="control-label"></label>
-                <input asp-for="FormFile" class="form-control" />
-                <span asp-validation-for="FormFile" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
