--- a/Northwind.Application/Views/Employees/Edit.cshtml
+++ b/Northwind.Application/Views/Employees/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Northwind.Application.Models.Employee.EmployeeCreateEditModel
+﻿@model Northwind.Application.Models.Employee.EmployeeEditModel
 @{
     ViewData["Title"] = "Edit";
 }
@@ -12,6 +12,15 @@
         <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="EmployeeId" />
+            <input type="hidden" asp-for="Photo" />
+
+            <div class="form-group">Picture</div>
+            <div class="form-group">
+                <img src="data:image/bmp;base64,@Convert.ToBase64String(Model.Photo!)" style="height:160px;width:160px;" />
+                <input asp-for="FormFile" class="form-control" />
+                <span asp-validation-for="FormFile" class="text-danger"></span>
+            </div>
+
             <div class="form-group">
                 <label asp-for="LastName" class="control-label"></label>
                 <input asp-for="LastName" class="form-control" />
@@ -71,11 +80,6 @@
                 <label asp-for="HomePhone" class="control-label"></label>
                 <input asp-for="HomePhone" class="form-control" />
                 <span asp-validation-for="HomePhone" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FormFile" class="control-label"></label>
-                <input asp-for="FormFile" class="form-control" />
-                <span asp-validation-for="FormFile" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Notes" class="control-label"></label>
