--- a/Northwind.Application/Views/Categories/Index.cshtml
+++ b/Northwind.Application/Views/Categories/Index.cshtml
@@ -27,16 +27,16 @@
     <tbody>
 @foreach (var item in Model) {
         <tr onclick="location.href = '@Url.ActionLink("Details", "Categories", new { id = item.CategoryId })'" style="cursor:pointer">
-            <td>
+            <td class="align-middle">
                 @Html.DisplayFor(modelItem => item.CategoryName)
             </td>
-            <td>
+            <td class="align-middle">
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
-            <td>
+            <td class="align-middle">
                 <img src="data:image/bmp;base64,@Convert.ToBase64String(item.Picture! ?? new byte[0])" style="height:60px;width:60px;" />
             </td>
-            <td>
+            <td class="align-middle">
                 <ul style="list-style-type: none;">
                     <li class="mb-1">
                         <a asp-action="Edit" asp-route-id="@item.CategoryId">Edit</a>
