--- a/Northwind.Application/Views/Employees/Index.cshtml
+++ b/Northwind.Application/Views/Employees/Index.cshtml
@@ -48,7 +48,7 @@
             <td>
                 <img src="data:image/bmp;base64,@Convert.ToBase64String(item.Photo!)" style="height:60px;width:60px;" />
             </td>
-            <td>
+            <td class="align-middle">
                 <ul style="list-style-type: none;">
                     <li class="mb-1">
                         <a asp-action="Edit" asp-route-id="@item.EmployeeId">Edit</a>
