--- a/Northwind.Application/Views/Shared/_Layout.cshtml
+++ b/Northwind.Application/Views/Shared/_Layout.cshtml
@@ -24,6 +24,12 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
+                        </li class="nav-item">
+                        <li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Roles" asp-action="UserList">Users</a>
+                        </li>
+                        <li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Roles" asp-action="Index">Roles</a>
                         </li>
                     </ul>
                     <ul class="align-content-end">
