--- a/Northwind.Application/Views/Roles/Edit.cshtml
+++ b/Northwind.Application/Views/Roles/Edit.cshtml
@@ -14,5 +14,5 @@
             @role.Name <br />
         }
     </div>
-    <button type="submit" class="btn btn-primary">Сохранить</button>
+    <button type="submit" class="btn btn-primary">Save</button>
 </form>
