--- a/Northwind.Application/Views/Categories/Details.cshtml
+++ b/Northwind.Application/Views/Categories/Details.cshtml
@@ -1,4 +1,6 @@
-﻿@model Northwind.Data.Entities.Category
+﻿@using Northwind.Bll.Enums
+@using Northwind.Bll.Services
+@model Northwind.Data.Entities.Category
 
 @{
     ViewData["Title"] = "Details";
@@ -26,7 +28,7 @@
             @Html.DisplayNameFor(model => model.Picture)
         </dt>
         <dd class = "col-sm-10">
-            <img src="data:image/bmp;base64,@Convert.ToBase64String(Model.Picture!)" style="height:120px;width:120px;" />
+            <img src="data:image/bmp;base64,@Convert.ToBase64String(ImageConverter.ConvertNorthwindPhoto(Model.Picture!, ImageHeaders.Category))" style="height:120px;width:120px;" />
         </dd>
     </dl>
 </div>
