--- a/Northwind.Application/Views/Employees/Details.cshtml
+++ b/Northwind.Application/Views/Employees/Details.cshtml
@@ -1,4 +1,6 @@
-﻿@model Northwind.Data.Entities.Employee
+﻿@using Northwind.Bll.Enums
+@using Northwind.Bll.Services
+@model Northwind.Data.Entities.Employee
 
 @{
     ViewData["Title"] = "Details";
@@ -14,7 +16,7 @@
             @Html.DisplayNameFor(model => model.Photo)
         </dt>
         <dd class="col-sm-10">
-            <img src="data:image/bmp;base64,@Convert.ToBase64String(Model.Photo!)" style="height:120px;width:120px;" />
+            <img src="data:image/bmp;base64,@Convert.ToBase64String(ImageConverter.ConvertNorthwindPhoto(Model.Photo!, ImageHeaders.Employee))" style="height:120px;width:120px;" />
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.LastName)
