Adjusted Guest Log In Logics

--- a/Northwind.Application/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Northwind.Application/Areas/Identity/Pages/Account/Login.cshtml
@@ -42,6 +42,9 @@
             </p>
         </div>
     </form>
+    <div>
+        <button class="w-100 btn btn-lg btn-primary" onclick="location.href='@Url.ActionLink("Register", "Guest")'">Guest</button>
+    </div>
 </div>
 
 @section Scripts {
