--- a/Northwind.Application/Views/Employees/Index.cshtml
+++ b/Northwind.Application/Views/Employees/Index.cshtml
@@ -1,15 +1,19 @@
 ﻿@model IEnumerable<Northwind.Application.Models.Employee.EmployeeIndexModel>
-
 @{
     ViewData["Title"] = "Employees";
-    var createLink = User.IsInRole("guest") ? Url.ActionLink("Create", "GuestEmployees") : Url.ActionLink("Create", "Employees");
+    var guest = User.IsInRole("guest") ? "Guest" : "";
 }
+
+<head>
+    <link href="@Url.Content("~/css/checkboxes.css")" rel="stylesheet" type="text/css" />
+</head>
 
 <h1>Employees</h1>
 
-<button class="btn btn-primary" onclick="location.href = '@createLink'">
+<button class="btn btn-primary" onclick="location.href = '@Url.ActionLink("Create", $"{guest}Employees")'">
     Create New
 </button>
+
 
 <table class="table">
     <thead>
@@ -26,35 +30,38 @@
             <th>
                 @Html.DisplayNameFor(model => model.Photo)
             </th>
-            <th></th>
+            <th class="text-center">
+                <input class="size" onchange="onChangeSelectAllHandler(this.checked)" id="selectAllCheckbox" type="checkbox" />
+            </th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-            <tr onclick="location.href = '@Url.ActionLink("Details", User.IsInRole("guest") ? "GuestEmployees" : "Employees", new { id = item.EmployeeId })'" style="cursor:pointer">
-            <td class="align-middle">
-                @Html.DisplayFor(modelItem => item.FirstName) @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td class="align-middle">
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td class="align-middle">
-                @Html.DisplayFor(modelItem => item.HireDate)
-            </td>
-            <td>
-                <img src="data:image/bmp;base64,@Convert.ToBase64String(item.Photo!)" style="height:60px;width:60px;" />
-            </td>
-            <td class="align-middle">
-                <ul style="list-style-type: none;">
-                    <li class="mb-1">
-                        <a asp-action="Edit" asp-route-id="@item.EmployeeId">Edit</a>
-                    </li>
-                    <li>
-                        <a asp-action="Delete" asp-route-id="@item.EmployeeId">Delete</a>
-                    </li>
-                </ul>
-            </td>
-        </tr>
-}
+        <form method="post" asp-action="Delete">
+            <button class="btn btn-danger float-end" type="submit" id="deleteButton" disabled="disabled">
+                Delete
+            </button>
+            @foreach (var item in Model)
+            {
+                <tr style="cursor:pointer">
+                    <td class="align-middle">
+                            @Html.DisplayFor(modelItem => item.FirstName) @Html.DisplayFor(modelItem => item.LastName)
+                    </td>
+                    <td class="align-middle" onclick="location.href = '@Url.ActionLink("Details", $"{guest}Employees", new { id = item.EmployeeId })'">
+                            @Html.DisplayFor(modelItem => item.Title)
+                    </td>
+                    <td class="align-middle" onclick="location.href = '@Url.ActionLink("Details", $"{guest}Employees", new { id = item.EmployeeId })'">
+                            @Html.DisplayFor(modelItem => item.HireDate)
+                    </td>
+                    <td class="align-middle" onclick="location.href = '@Url.ActionLink("Details", $"{guest}Employees", new { id = item.EmployeeId })'">
+                        <img src="data:image/bmp;base64,@Convert.ToBase64String(item.Photo!)" style="height:60px;width:60px;" />
+                    </td>
+                    <td class="align-middle text-center" style="min-width:50px;">
+                        <input name="ids" type="checkbox" id="@item.EmployeeId" asp-for="@item.Delete" value="@item.EmployeeId" onclick="onChangeHandler(this)" />
+                    </td>
+                </tr>
+            }
+        </form>
     </tbody>
 </table>
+
+<script src="~/js/checkboxes.js"/>
