--- a/Northwind.Application/Views/Categories/Details.cshtml
+++ b/Northwind.Application/Views/Categories/Details.cshtml
@@ -4,6 +4,7 @@
 
 @{
     ViewData["Title"] = "Details";
+    var guest = User.IsInRole("guest") ? "Guest" : "";
 }
 
 <h1>Details</h1>
@@ -12,6 +13,12 @@
     <h4>Category</h4>
     <hr />
     <dl class="row">
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Picture)
+        </dt>
+        <dd class="col-sm-10">
+            <img src="data:image/bmp;base64,@Convert.ToBase64String(ImageConverter.ConvertNorthwindPhoto(Model.Picture!, ImageHeaders.Category))" style="height:120px;width:120px;" />
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CategoryName)
         </dt>
@@ -24,15 +31,7 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Picture)
-        </dt>
-        <dd class = "col-sm-10">
-            <img src="data:image/bmp;base64,@Convert.ToBase64String(ImageConverter.ConvertNorthwindPhoto(Model.Picture!, ImageHeaders.Category))" style="height:120px;width:120px;" />
-        </dd>
     </dl>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.CategoryId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+<button class="btn btn-primary" onclick="location.href = '@Url.ActionLink("Edit", $"{guest}Categories", new { id = Model.CategoryId })'">Edit</button>
+<a asp-action="Index" class="float-end fw-bold">Back to List</a>
