--- a/Northwind.Application/Views/Categories/Edit.cshtml
+++ b/Northwind.Application/Views/Categories/Edit.cshtml
@@ -30,14 +30,8 @@
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
+            <input type="submit" value="Save" class="btn btn-primary" />
+            <a asp-action="Index" class="float-end fw-bold">Back to List</a>
         </form>
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
