--- a/Northwind.Application/Views/Employees/Edit.cshtml
+++ b/Northwind.Application/Views/Employees/Edit.cshtml
@@ -91,14 +91,8 @@
                 <select asp-for="ReportsTo" class="form-control" asp-items="ViewBag.ReportsTo"></select>
                 <span asp-validation-for="ReportsTo" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
+            <input type="submit" value="Save" class="btn btn-primary" />
+            <a asp-action="Index" class="float-end fw-bold">Back to List</a>
         </form>
     </div>
 </div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
