Developed picture adding logics

--- a/Northwind.Application/Views/Categories/Create.cshtml
+++ b/Northwind.Application/Views/Categories/Create.cshtml
@@ -3,6 +3,10 @@
     ViewData["Title"] = "Create";
 }
 
+<head>
+    <link href="@Url.Content("~/css/details.css")" rel="stylesheet" type="text/css" />
+</head>
+
 <h1>Create</h1>
 
 <h4>Category</h4>
