--- a/Northwind.Application/Views/Categories/Details.cshtml
+++ b/Northwind.Application/Views/Categories/Details.cshtml
@@ -7,6 +7,10 @@
     var guest = User.IsInRole("guest") ? "Guest" : "";
 }
 
+<head>
+    <link href="@Url.Content("~/css/details.css")" rel="stylesheet" type="text/css" />
+</head>
+
 <h1>Details</h1>
 
 <div>
