--- a/Northwind.Application/Views/Employees/Edit.cshtml
+++ b/Northwind.Application/Views/Employees/Edit.cshtml
@@ -3,6 +3,10 @@
     ViewData["Title"] = "Edit";
 }
 
+<head>
+    <link href="@Url.Content("~/css/details.css")" rel="stylesheet" type="text/css" />
+</head>
+
 <h1>Edit</h1>
 
 <h4>Employee</h4>
@@ -14,10 +18,11 @@
             <input type="hidden" asp-for="EmployeeId" />
             <input type="hidden" asp-for="Photo" />
 
-            <div class="form-group">Picture</div>
-            <div class="form-group">
-                <img src="data:image/bmp;base64,@Convert.ToBase64String(Model.Photo!)" style="height:160px;width:160px;" />
-                <input asp-for="FormFile" class="form-control" />
+            <label class="control-label">Picture</label>
+            <div class="form-group" >
+                <input id="fileInput" asp-for="FormFile" class="form-control" style="display:none" onchange="previewFile(this)"/>
+                <img id="image" src="data:image/bmp;base64,@Convert.ToBase64String(Model.Photo!)" onclick="onImageClickHandler()" style="cursor:pointer"/>
+                <label style="position:relative;">Change image...</label>
                 <span asp-validation-for="FormFile" class="text-danger"></span>
             </div>
 
@@ -83,12 +88,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Notes" class="control-label"></label>
-                <input asp-for="Notes" class="form-control" />
+                <textarea asp-for="Notes" class="form-control"></textarea>
                 <span asp-validation-for="Notes" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ReportsTo" class="control-label"></label>
-                <select asp-for="ReportsTo" class="form-control" asp-items="ViewBag.ReportsTo"></select>
+                <select asp-for="ReportsTo" class="form-select" asp-items="ViewBag.ReportsTo"></select>
                 <span asp-validation-for="ReportsTo" class="text-danger"></span>
             </div>
             <input type="submit" value="Save" class="btn btn-primary" />
@@ -96,3 +101,5 @@
         </form>
     </div>
 </div>
+
+<script src="~/js/fileSelection.js" />
