--- a/Northwind.Application/Views/Categories/Edit.cshtml
+++ b/Northwind.Application/Views/Categories/Edit.cshtml
@@ -1,8 +1,11 @@
 ﻿@model Northwind.Application.Models.Category.CategoryEditModel
-
 @{
     ViewData["Title"] = "Edit";
 }
+
+<head>
+    <link href="@Url.Content("~/css/details.css")" rel="stylesheet" type="text/css" />
+</head>
 
 <h1>Edit</h1>
 
@@ -14,10 +17,11 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="CategoryId" />
             <input type="hidden" asp-for="Picture" />
-            <div class="form-group">Picture</div>
+            <label class="control-label">Picture</label>
             <div class="form-group">
-                <img src="data:image/bmp;base64,@Convert.ToBase64String(Model.Picture!)" style="height:160px;width:160px;" />
-                <input asp-for="FormFile" class="form-control" />
+                <img id="image" src="data:image/bmp;base64,@Convert.ToBase64String(Model.Picture!)" onclick="onImageClickHandler()" style="cursor:pointer" />
+                <label style="position:relative;">Change image...</label>
+                <input id="fileInput" asp-for="FormFile" class="form-control" onchange="previewFile(this)" style="display:none" />
                 <span asp-validation-for="FormFile" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -27,7 +31,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <textarea asp-for="Description" class="form-control"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <input type="submit" value="Save" class="btn btn-primary" />
@@ -35,3 +39,5 @@
         </form>
     </div>
 </div>
+
+<script src="~/js/fileSelection.js" />
