Refactored Picture adding in Create logics

--- a/Northwind.Application/Views/Categories/Create.cshtml
+++ b/Northwind.Application/Views/Categories/Create.cshtml
@@ -3,6 +3,28 @@
     ViewData["Title"] = "Create";
 }
 
+@functions{
+    byte[] GetDefaultPicture()
+    {
+        var result = new byte[0];
+
+        try
+        {
+            result = File.ReadAllBytes("wwwroot/pics/AddPicture.gif");
+        }
+        catch (DirectoryNotFoundException ex)
+        {
+            Console.WriteLine(ex.Message);
+        }
+        catch (FileNotFoundException ex)
+        {
+            Console.WriteLine(ex.Message);
+        }
+
+        return result;
+    }
+}
+
 <head>
     <link href="@Url.Content("~/css/details.css")" rel="stylesheet" type="text/css" />
 </head>
@@ -13,8 +35,14 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create" enctype="multipart/form-data">
+        <form asp-action="Create" enctype="multipart/form-data">           
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <label class="control-label">Picture</label>
+            <div class="form-group">                
+                <img id="image" src="data:image/bmp;base64,@Convert.ToBase64String(Model == null || Model.Picture == null ? GetDefaultPicture() : Model.Picture!)" onclick="onImageClickHandler()" style="cursor:pointer" />
+                <input id="fileInput" asp-for="FormFile" class="form-control" onchange="previewFile(this)" style="display:none"/>
+                <span asp-validation-for="FormFile" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="CategoryName" class="control-label"></label>
                 <input asp-for="CategoryName" class="form-control" />
@@ -26,11 +54,6 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FormFile" class="control-label">Picture</label>
-                <input asp-for="FormFile" class="form-control" />
-                <span asp-validation-for="FormFile" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
@@ -40,4 +63,6 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+
+<script src="~/js/fileSelection.js"></script>
 
