Resolved Resubmission page issue by using get post request sequence

--- a/Northwind.Application/Views/Employees/Index.cshtml
+++ b/Northwind.Application/Views/Employees/Index.cshtml
@@ -35,7 +35,7 @@
         </tr>
     </thead>
     <tbody>
-    <form method="post" asp-action="Delete">
+    <form method="get" asp-action="Delete">
         <button class="btn btn-danger float-end" type="submit" id="deleteButton" hidden>
             Delete
         </button>
