--- a/Northwind.Application/Views/Categories/Details.cshtml
+++ b/Northwind.Application/Views/Categories/Details.cshtml
@@ -35,6 +35,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Products)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.ActionLink("Product List","Index", "Products", new { id = Model.CategoryId })
+        </dd>
     </dl>
 </div>
 <button class="btn btn-primary" onclick="location.href = '@Url.ActionLink("Edit", $"{guest}Categories", new { id = Model.CategoryId })'">Edit</button>
