--- a/Northwind.Application/Views/Categories/Details.cshtml
+++ b/Northwind.Application/Views/Categories/Details.cshtml
@@ -39,7 +39,7 @@
             @Html.DisplayNameFor(model => model.Products)
         </dt>
         <dd class="col-sm-10">
-            @Html.ActionLink("Product List","Index", "Products", new { id = Model.CategoryId })
+            @Html.ActionLink("Product List", "Index", "Products", new { categoryId = Model.CategoryId })
         </dd>
     </dl>
 </div>
